dataset1235/2025-2/610742602/users/2485683856/executions/2563853024_593159971.log
== SUBMISSION (2025-09-02 20:33:57)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota1 + nota2 + nota3 / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
13.866666666666667
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
20.033333333333335
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
12.166666666666666
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
21.233333333333334
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
6.333333333333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:39:35)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2) - nota3 / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
9.133333333333333
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
15.166666666666668
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
7.833333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
15.166666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:34:33)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota1 + nota2 + nota3 - 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
15.600000000000001
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
21.900000000000002
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
13.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
3.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
24.299999999999997
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:50:39)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2 + nota3) / 3)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:42:26)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2) + nota3 / 3
print(media, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
13.866666666666667 2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
20.033333333333335 2
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
12.166666666666666 2
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
4.0 2
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
21.233333333333334 2
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
6.333333333333333 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:43:36)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota2 * nota1) + nota3 - 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
36.96
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
81.64999999999999
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
28.25
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
88.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:38:06)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota1 + nota2 - (nota3 / 3)
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
9.133333333333333
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
15.166666666666668
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
7.833333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
15.166666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:50:53)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:51:04)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:50:41)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2 + nota3) / 3)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 4
    media = (nota1 + nota2 + nota3) / 3)
                                       ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:35:44)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota1 + nota2 - nota3 / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
9.133333333333333
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
15.166666666666668
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
7.833333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
15.166666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:40:34)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota3 / 3 - (nota1 + nota2) 
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
-9.133333333333333
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
-15.166666666666668
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
-7.833333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
-2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
-15.166666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
-3.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:48:58)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = (nota1 + nota2) - (nota3 / 3)
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
9.133333333333333
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
15.166666666666668
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
7.833333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
15.166666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:37:46)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota1 + nota2 - (nota3 / 3)
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
9.133333333333333
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
15.166666666666668
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
7.833333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
15.166666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:41:05)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota3 / 3 + (nota1 - nota2) 
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
1.4666666666666663
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
1.8333333333333335
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
1.1666666666666665
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
0.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
4.833333333333334
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
0.33333333333333326
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:36:13)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota1 + nota2 - nota3 / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
9.133333333333333
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
15.166666666666668
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
7.833333333333334
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
15.166666666666666
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
3.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:37:12)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
media = nota1 - nota2 + (nota3 / 3)
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
1.4666666666666663
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
1.8333333333333335
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
1.1666666666666665
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
0.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
4.833333333333334
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
0.33333333333333326
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
